# thomaslaurenson

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cards.yml  update_cards_daily.yml  update_cards_hourly.yml
cards/: README.md  fetch_cards.sh
cards/github-readme-stats/: .env  Dockerfile
cards/github-readme-streak-stats/: Dockerfile
data/: .env  README.md  fetch_repo_metadata.py  github_stats.py  requirements.txt  top_languages.py
src/: config.py  github_activity_card.py  github_badges.py  github_client.py  github_languages_card.py  github_plan_card.py  github_pr_card.py  github_stats_card.py  github_streak_card.py  graphql_queries.py  render_template.py  stats.py
