[project]
name = "github-stats"
version = "0.1.0"
description = "GitHub statistics tooling"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.34.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.22",
]

[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I"]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
